syntax = "proto3";
package gloo.solo.io;
option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1";

import "extproto/ext.proto";
option (extproto.equal_all) = true;
option (extproto.hash_all) = true;
option (extproto.clone_all) = true;

import "google/protobuf/wrappers.proto";

message RouteConfigurationOptions {
  // The maximum bytes of the response direct response body size. If not specified the default is 4096.
  // Please refer to the [Envoy documentation](https://www.envoyproxy.io/docs/envoy/latest/api-v3/config/route/v3/route.proto#envoy-v3-api-field-config-route-v3-routeconfiguration-max-direct-response-body-size-bytes)
  // for more details about the `max_direct_response_body_size_bytes` attribute.
  google.protobuf.UInt32Value max_direct_response_body_size_bytes = 1;

  // By default, headers that should be added/removed are evaluated from most to least specific.
  // To allow setting overrides at the route or virtual host level, this order can be reversed by setting this option to true.
  // Refer to the [Envoy documentation](https://www.envoyproxy.io/docs/envoy/latest/api-v3/config/route/v3/route.proto#envoy-v3-api-field-config-route-v3-routeconfiguration-most-specific-header-mutations-wins) for more details.
  google.protobuf.BoolValue most_specific_header_mutations_wins = 2;
}